WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
302304
Fix termination exception handling if microtask draining terminates with deferred work pending
https://bugs.webkit.org/show_bug.cgi?id=302304
Summary
Fix termination exception handling if microtask draining terminates with defe...
Shu-yu Guo
Reported
2025-11-10 17:54:35 PST
rdar://163999397
Attachments
Add attachment
proposed patch, testcase, etc.
Shu-yu Guo
Comment 1
2025-11-10 18:08:04 PST
Pull request:
https://github.com/WebKit/WebKit/pull/53717
EWS
Comment 2
2025-11-11 16:18:36 PST
Committed
302874@main
(c4b1c589e945): <
https://commits.webkit.org/302874@main
> Reviewed commits have been landed. Closing PR #53717 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug