[JSC] Handle termination exception after draining microtasks in jsc shell https://bugs.webkit.org/show_bug.cgi?id=302304 rdar://163999397

Reviewed by Keith Miller.

Throwing a termination exception in a microtask causes the draining to stop,
but does not forbid future execution, and also proceeds to do deferred work.
Doing deferred work with a termination exception pending on the VM can trigger
asserts.

This PR only continues further execution in the jsc shell after draining
microtask queue if a termination exception was not thrown.

Test: JSTests/stress/jsc-termination-in-microtask.js

* JSTests/stress/jsc-termination-in-microtask.js: Added.
(async asyncInfiniteLoop):
* Source/JavaScriptCore/jsc.cpp:
(runJSC):

Canonical link: https://commits.webkit.org/302874@main